--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </ul>
 
             <button class="btn">Get Started</button>
+            <button class="btn1"> <img src="./imgs/telver.png" alt=""></button>
           </div>
         </div>
       </nav>
